--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
 <h3 class="margin"></h3>
-  <button class="button w3-btn" style="vertical-align:middle"><span>Inicia Sesion</span></button><button class="button w3-btn" style="vertical-align:middle"><span>Registrarse </span></button>
+ <a href="http://manoamanologin.ml" class="button w3-btn" style="vertical-align:middle"><span>Inicia Sesion</span></a><a href="http://manoamanologin.ml" class="button w3-btn" style="vertical-align:middle"><span>Registrarse</span></a>
   <h3>Trabajo Desde Casa</h3>
-</div>
+</div> 
 
 
 <!-- Second Container -->
