--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <body>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+ 
+  <title>Mano A Mano</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8">
@@ -42,7 +42,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
 <h3 class="margin"></h3>
-  <button class="button w3-btn" style="vertical-align:middle"><span>Inicia Sesion</span></button><button class="button w3-btn" style="vertical-align:middle"><span>Registrarse </span></button>
+  <a href="http://manoamanologin.ml" class="button w3-btn" style="vertical-align:middle"><span>Inicia Sesion</span></a><a href="http://manoamanologin.ml" class="button w3-btn" style="vertical-align:middle"><span>Registrarse</span></a>
   <h3>Trabajo Desde Casa</h3>
 </div>
 
