--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ y sin compromiso!</h3>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.Mano a Mano.com</a>&#169;</p>
+  <p><a href="http://manoamanohome.ml/">ManoAMano.ml/</a>&#169;</p>
   <i class="fa fa-facebook-square" style="font-size:48px;color:#00c3ff" ></i>
   <i class="fa fa-linkedin-square" style="font-size:48px;color:#00c3ff"></i>
   <i class="fa fa-twitter-square" style="font-size:48px;color:#00c3ff "></i>
