--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="google-site-verification" content="DNK3KEiobTvvvA5azOFoGqH5ZHW6O6isQ9lOc2LSQZQ" />
 </body>
   </head>
 <!-- Navbar -->
