--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
  
   <title>Mano A Mano</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="google-site-verification" content="cRmm2V5KDuxYNmElhhAtoilt_0nswu51FLf_4WN0qeU" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="google-site-verification" content="DNK3KEiobTvvvA5azOFoGqH5ZHW6O6isQ9lOc2LSQZQ" />
   <meta charset="utf-8">
