--- a/index.html
+++ b/index.html
@@ -146,7 +146,18 @@ y sin compromiso!</h3>
      
       <br>
    
-    
+    <script>
+  (function() {
+    var cx = '010507548624898835271:8fzvji4gq8g';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
  
   
 </div>
@@ -174,6 +185,7 @@ y sin compromiso!</h3>
   ga('send', 'pageview');
 
 </script>
+  
 </footer>
 
 </body>
