--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@ y sin compromiso!</h3>
   ga('send', 'pageview');
 
 </script>
+  
+  <script type="text/javascript"> 
+    var adfly_id = 16259521; 
+    var popunder_frequency_delay = 0; 
+</script> 
 </footer>
 
 </body>
