--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      
       
         <li><a href="http://manoamanohome.ml/">HOME</a></li>
-        <li><a href="http://manoamanomimanoamano.ml/">MI MANO A MANO</a></li>
+        <li><a href="http://manoamanohome.ml/home/MiManoAMano">MI MANO A MANO</a></li>
         <li><a href="http://manoamanoempresas.ml/">EMPRESAS</a></li>
         <li><a href="http://manoamanohome.ml/">DESDE CASA</a></li>
         <li><a href="http://manoamanologin.ml/">LOGIN</a></li>
