--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="google-site-verification" content="DNK3KEiobTvvvA5azOFoGqH5ZHW6O6isQ9lOc2LSQZQ" />
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5714020950153997",
+    enable_page_level_ads: true
+  });
+</script>
 </body>
   </head>
 <!-- Navbar -->
